--- a/src/shadps4.qrc
+++ b/src/shadps4.qrc
@@ -1,5 +1,6 @@
 <RCC>
 	<qresource prefix="/">
+		<file>images/shadps4.ico</file>
 		<file>images/play_icon.png</file>
 		<file>images/pause_icon.png</file>
 		<file>images/stop_icon.png</file>
