- Added trophy decryption when extracting a fpkg. trp icons and xmls are dumped to game_data/<title> (can be restored if deleted by accident by opening the trophy viewer) - Added a trophy viewer (right click on game ==> trophy viewer) - Enabled Run button. - Switched gui settings to toml. - Added recent files (6 max) - Applied @raphaelthegreat suggestions and corrections (Thanks a lot). - Fixed several bugs and crashes. - Full screen should disabled by default. - Added region in list mode. - Added a simple temp elf list widget. - Added messages when extracting pkg (ex: installing a patch before the game...etc)

--- a/src/shadps4.qrc
+++ b/src/shadps4.qrc
@@ -15,5 +15,11 @@
 		<file>images/controller_icon.png</file>
 		<file>images/refresh_icon.png</file>
 		<file>images/list_mode_icon.png</file>
+		<file>images/flag_jp.png</file>
+		<file>images/flag_eu.png</file>
+		<file>images/flag_unk.png</file>
+		<file>images/flag_us.png</file>
+		<file>images/flag_world.png</file>
+		<file>images/flag_china.png</file>
 	</qresource>
 </RCC>
