--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -23,7 +23,7 @@
   </property>
   <property name="font">
    <font>
-    <pointsize>10</pointsize>
+    <pointsize>11</pointsize>
     <bold>false</bold>
    </font>
   </property>
@@ -52,7 +52,7 @@
         <x>0</x>
         <y>0</y>
         <width>832</width>
-        <height>420</height>
+        <height>418</height>
        </rect>
       </property>
       <property name="sizePolicy">
@@ -410,6 +410,19 @@
                   </layout>
                  </item>
                 </layout>
+               </item>
+               <item>
+                <spacer name="logSpacer">
+                 <property name="orientation">
+                  <enum>Qt::Orientation::Vertical</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>20</width>
+                   <height>40</height>
+                  </size>
+                 </property>
+                </spacer>
                </item>
               </layout>
              </widget>
