--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -52,7 +52,7 @@
         <x>0</x>
         <y>0</y>
         <width>836</width>
-        <height>428</height>
+        <height>432</height>
        </rect>
       </property>
       <property name="sizePolicy">
@@ -70,7 +70,7 @@
        </attribute>
        <layout class="QVBoxLayout" name="generalTabVLayout" stretch="0,0">
         <item>
-         <layout class="QHBoxLayout" name="generalTabHLayout" stretch="1,1,1">
+         <layout class="QHBoxLayout" name="generalTabHLayoutTop" stretch="1,1,1">
           <item>
            <layout class="QVBoxLayout" name="systemTabLayoutLeft">
             <item>
@@ -341,18 +341,54 @@
            </layout>
           </item>
           <item>
+           <layout class="QVBoxLayout" name="GUITabLayoutMiddle" stretch="1">
+            <item>
+             <widget class="QGroupBox" name="GUIgroupBox">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="title">
+               <string>GUI Settings</string>
+              </property>
+              <widget class="QWidget" name="verticalLayoutWidget_3">
+               <property name="geometry">
+                <rect>
+                 <x>10</x>
+                 <y>30</y>
+                 <width>241</width>
+                 <height>41</height>
+                </rect>
+               </property>
+               <layout class="QVBoxLayout" name="verticalLayout">
+                <item>
+                 <widget class="QCheckBox" name="playBGMCheckBox">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="text">
+                   <string>Play title music</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
            <spacer name="horizontalSpacer">
             <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+             <enum>Qt::Orientation::Horizontal</enum>
             </property>
             <property name="sizeType">
-             <enum>QSizePolicy::Expanding</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>500</width>
-              <height>20</height>
-             </size>
+             <enum>QSizePolicy::Policy::Expanding</enum>
             </property>
            </spacer>
           </item>
