--- a/src/shadps4.qrc
+++ b/src/shadps4.qrc
@@ -6,6 +6,7 @@
 		<file>images/play_icon.png</file>
 		<file>images/pause_icon.png</file>
 		<file>images/stop_icon.png</file>
+		<file>images/utils_icon.png</file>
 		<file>images/file_icon.png</file>
 		<file>images/folder_icon.png</file>
 		<file>images/themes_icon.png</file>
