--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -12,7 +12,7 @@
     <x>0</x>
     <y>0</y>
     <width>970</width>
-    <height>670</height>
+    <height>750</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -132,6 +132,35 @@
                    <property name="text">
                     <string>Enable Fullscreen</string>
                    </property>
+                  </widget>
+                 </item>
+				 <item>
+                  <widget class="QGroupBox" name="fullscreenModeGroupBox">
+                   <property name="title">
+                    <string>Fullscreen Mode</string>
+                   </property>
+                   <layout class="QVBoxLayout" name="fullscreenModeLayout">
+                    <item>
+                     <widget class="QComboBox" name="fullscreenModeComboBox">
+                      <property name="sizePolicy">
+                       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                        <horstretch>0</horstretch>
+                        <verstretch>0</verstretch>
+                       </sizepolicy>
+                      </property>
+                      <item>
+                       <property name="text">
+                        <string>Borderless</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>True</string>
+                       </property>
+                      </item>
+                     </widget>
+                    </item>
+                   </layout>
                   </widget>
                  </item>
                  <item>
@@ -536,6 +565,9 @@
                    <property name="leftMargin">
                     <number>0</number>
                    </property>
+                   <property name="bottomMargin">
+                    <number>80</number>
+                   </property>
                    <item>
                     <layout class="QHBoxLayout" name="hLayoutTrophy">
                      <item>
@@ -565,6 +597,12 @@
                             <width>0</width>
                             <height>0</height>
                            </size>
+                          </property>
+                          <property name="font">
+                           <font>
+                            <pointsize>10</pointsize>
+                            <bold>false</bold>
+                           </font>
                           </property>
                          </widget>
                         </item>
